update Qjay description

--- a/projects.json
+++ b/projects.json
@@ -36,7 +36,7 @@
   },
   {
     "title": "QJay",
-    "description": "full featured production app for DJs and Dancers to make requests and manage dance queues. Developed with AI tools, not hand coded.",
+    "description": "full featured production app for DJs and Dancers to make requests and manage dance queues.",
     "relativeLink": "https://qjay.app"
   }
 ]
